[gd_scene load_steps=2 format=3 uid="uid://c3u8pd5xfvt8q"]

[ext_resource type="Script" path="res://src/ui/options.gd" id="1_yjk2t"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjk2t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.8

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DisplayLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Display"

[node name="FullscreenCheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"] 